--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <p>Pixels Per Edge (P x P):</p>
                 <input id="pixelsPerEdge" type="number" autocomplete="off" placeholder="P: " value="16" min="1" max="100">
                 <button id="setPixels">Set Pixels</button>
+                <button id="resetSketch">Reset</button>
             </div>
             <div id="sketchContainer" class="sketch-container"></div>
         </div>
