--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id="main-container">
             <div class="user-controls">
                 <div id="sketchPadControls">
-                    <p>Pixels Per Edge (P x P):</p>
-                    <input id="pixelsPerEdge" type="number" autocomplete="off" placeholder="P: " value="16" min="1" max="100">
+                    <p>Pixels Per Edge</p>
+                    <input id="pixelsPerEdge" type="number" autocomplete="off" placeholder="Pixels(1 - 100): " value="24" min="1" max="100">
                     <button id="setPixels">Set Pixels</button>
                     <button id="resetSketch">Reset</button>
                     <button id="showGrids">Show Grids</button>
