Progress on shading

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                     <button id="defaultBrush">Default</button>
                     <button id="rgbBrush">RGB</button>
                     <button id="eraser">Eraser</button>
+                    <button id="darkenBrush">Darken</button>
+                    <button id="lightenBrush">Lighten</button>
                 </div>
             </div>
             <div id="sketchContainer" class="sketch-container"></div>
