Better margins in user-controls div

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <div id="main-container">
             <div class="user-controls">
                 <div id="sketchPadControls">
-                    <p>Pixels Per Edge</p>
+                    <span>Pixels Per Edge</span>
                     <input id="pixelsPerEdge" type="number" autocomplete="off" placeholder="Pixels(1 - 100): " value="24" min="1" max="100">
                     <button id="setPixels">Set Pixels</button>
                     <button id="resetSketch">Reset</button>
                     <button id="showGrids">Show Grids</button>
                 </div>
                 <div id="brushButtons">
-                    <p>Brush Style</p>
+                    <span>Brush Style</span>
                     <button id="defaultBrush">Default</button>
                     <button id="rgbBrush">RGB</button>
                     <button id="eraser">Eraser</button>
